--- a/config.json
+++ b/config.json
@@ -2,8 +2,9 @@
     "server":"127.0.0.1",
     "server_port":8388,
     "local_address":"127.0.0.1",
-    "local_port":1080,
+    "local_port":10080,
     "password":"barfoo!",
     "timeout":600,
-    "method":"aes-256-cfb"
+    "method":"rc4-md5",
+    "fake_string": "POST /index.php HTTP.1.1\r\nHost: digiato.com\r\n\r\n"
 }
